sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:4: error: not found: value int
    int etat=0;
    ^AlgBubbleSort1:8: error: not found: value etat
        etat=1;
        ^AlgBubbleSort1:11: error: not found: value etat
  }while(etat==0);
         ^